--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>我的专属复旦情话</title>
 <div id="wx_pic" style="margin:0 auto;display:none;">
-<img src="images/show.png" />
+<img src="images/pic1.jpg" />
 </div>
 <link rel="stylesheet" />
 <style type="text/css">
@@ -17,11 +17,11 @@ IMG {BORDER-TOP-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BO
 
 <body>
 <div id="main" style="position:absolute; width:100%; height:100%; z-index:-1">
-	 <img src="images/front.jpg" height="100%" width="100%">
+	 <img src="images/c.jpg" height="100%" width="100%">
 </div>
 
-<script type="text/javascript" src="shake.js"></script>
-<script type="text/javascript" src="pic.js"></script>
+<script type="text/javascript" src="js/shake.js"></script>
+<script type="text/javascript" src="js/pic.js"></script>
 
 <script type="text/javascript">
 
