--- a/templates/hello.html
+++ b/templates/hello.html
@@ -21,8 +21,8 @@ IMG {BORDER-TOP-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BO
 	 <img src="images/c.jpg" height="100%" width="100%">
 </div>
 
-<script type="text/javascript" src="js/shake.js"></script>
-<script type="text/javascript" src="js/pic.js"></script>
+<script type="text/javascript" src="/static/js/shake.js"></script>
+<script type="text/javascript" src="/static/js/pic.js"></script>
 
 <script type="text/javascript">
 
