--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>我的专属复旦情话</title>
 <div id="wx_pic" style="margin:0 auto;display:none;">
-<img src="smallprogram/static/images/pic1.jpg" />
+<img src="static/images/pic1.jpg" />
 </div>
 <link rel="stylesheet" />
 <style type="text/css">
@@ -18,11 +18,11 @@ IMG {BORDER-TOP-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BO
 
 <body>
 <div id="main" style="position:absolute; width:100%; height:100%; z-index:-1">
-	 <img src="smallprogram/static/images/c.jpg" height="100%" width="100%">
+	 <img src="static/images/c.jpg" height="100%" width="100%">
 </div>
 
-<script type="text/javascript" src="smallprogram/static/js/shake.js"></script>
-<script type="text/javascript" src="smallprogram/static/js/pic.js"></script>
+<script type="text/javascript" src="static/js/shake.js"></script>
+<script type="text/javascript" src="static/js/pic.js"></script>
 
 <script type="text/javascript">
 
