--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>我的专属复旦情话</title>
+<title>教师节</title>
 <div id="wx_pic" style="margin:0 auto;display:none;">
 <img src="static/images/pic1.jpg" />
 </div>
