--- a/templates/hello.html
+++ b/templates/hello.html
@@ -18,7 +18,7 @@ IMG {BORDER-TOP-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BO
 
 <body>
 <div id="main" style="position:absolute; width:100%; height:100%; z-index:-1">
-	 <img src="static/images/c.jpg" height="100%" width="100%">
+	 <img src="static/images/welcome_page.jpg" height="100%" width="100%">
 </div>
 
 <script type="text/javascript" src="static/js/shake.js"></script>
