--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>教师节</title>
+<title>那些年老师说过的段子</title>
 <div id="wx_pic" style="margin:0 auto;display:none;">
 <img src="static/images/pic1.jpg" />
 </div>
@@ -24,12 +24,7 @@ IMG {BORDER-TOP-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BO
 <script type="text/javascript" src="static/js/shake.js"></script>
 <script type="text/javascript" src="static/js/pic.js"></script>
 
-<script type="text/javascript">
 
-var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1263716982'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s5.cnzz.com/stat.php%3Fid%3D1263716982' type='text/javascript'%3E%3C/script%3E"));
-document.getElementById("cnzz_stat_icon_1263716982").style.display = "none";
-
-</script>
 
 
 </div>
