--- a/templates/hello.html
+++ b/templates/hello.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1,maximum-scale=1,user-scalable=no">
 <title>那些年老师说过的段子</title>
 <div id="wx_pic" style="margin:0 auto;display:none;">
 <img src="static/images/pic1.jpg" />
