--- a/templates/hello.html
+++ b/templates/hello.html
@@ -17,7 +17,9 @@ IMG {BORDER-TOP-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BO
 </head>
 
 <body>
-	 <img src="static/images/welcome_page.jpg" height="100%" width="100%">
+	<div id="main">
+    	<img src="static/images/welcome_page.jpg" height="100%" width="100%">
+	</div>
 
 <script type="text/javascript" src="static/js/shake.js"></script>
 <script type="text/javascript" src="static/js/pic.js"></script>
