--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1,maximum-scale=1,user-scalable=no">
 <title>那些年老师说过的段子</title>
 <div id="wx_pic" style="margin:0 auto;display:none;">
-<img src="static/images/pic1.jpg" />
+<img src="static/images/welcome_page.jpg" />
 </div>
 <link rel="stylesheet" />
 <style type="text/css">
