--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="minimum-scale=1.0, width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
     <title>【免费课程报名】数字逻辑仿真工具实践</title>    
     <script type="text/javascript" src="js/verification.js"></script>
-    <link href="css/index.css" rel="stylesheet"></head>
+	<link href="css/index.css" rel="stylesheet"/>
+	</head>
 	<body>
 		<form id="myForm"></form>
 		<!--面板-->
