--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 		    <div class="panel-content">
 		        <div class="int">
 		            <label><img src="static/img/phone.png" ></label>
-		            <input id="phone" class="phone_input" type="text" placeholder="您的手机号/用户名" form="myForm">
+		            <input id="phone" class="phone_input" type="text" placeholder="您的手机号" form="myForm">
 		        </div>
 		        <div class="int_2">
 		    		<label><img src="static/img/verification.png" ></label>
