--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="minimum-scale=1.0, width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
-		<title>【免费课程报名】数字逻辑仿真工具实践</title>
+		<title>【免费课程领取】数字逻辑仿真工具实践</title>
 		<script type="text/javascript" src="static/js/verification.js"></script>
 		<link href="static/css/index.css" rel="stylesheet"/>
 	</head>
@@ -28,7 +28,7 @@
 		        </div>
 		        <div class="int_2">
 		    		<label><img src="static/img/verification.png" ></label>
-		        	<input class="verification" id="code" type="password" placeholder="输入验证码" form="myForm">	    
+		        	<input class="verification" id="code" placeholder="输入验证码" form="myForm">	    
 		        	<button class="get-code" onclick="getCode(this)" id="J_getCode">获取验证码</button>
 		            <button class="reset-code" id="J_resetCode" style="display:none;"><span id="J_second">30</span>秒后重发</button>
 		        </div>
